# MultiCloud

./: CMakeLists.txt  README.md  make.sh  test.sh
include/MultiCloud/: io.hpp  point_visualizer.hpp  types.hpp
src/: io.cpp  point_visualizer.cpp  types.cpp
test/: point_types_test.cpp
test/visualizer/: point_visualizer_test.cpp
